Removed shitty special args